--- a/en/html/About.html
+++ b/en/html/About.html
@@ -40,7 +40,7 @@
 \lcs - run as LCS editor<br>
 \vcs - run as VCS editor<br>
 \sa_mobile - run as SA Mobile editor.<br>
-<p class="note">You can change the <a href="edit_modes.htm">current edit mode</a> in run-time.</p>
+<p class="note">You can change the <a href="edit_modes.html">current edit mode</a> in run-time.</p>
 \debug - <a href="console.htm#DEBUG">enables the debug options</a><br>
 \compile input_file_path [output_file_path] - run compilation in hidden mode at the program startup<br>
 <p class="note">Example: \compile C:\myscm.txt C:\myscm.scm<br>
