--- a/en/html/Cleo.html
+++ b/en/html/Cleo.html
@@ -16,11 +16,11 @@
 
 <P>CLEO 3 is the next step in the CLEO project development that extends coding possibilities in San Andreas. After installing CLEO 3, you get everything that CLEO 2 can, plus some new features.<br>
   <br>
-1. <a href="Cleo_OP.htm">New opcodes</a>.<br>
-CLEO 3 has 40 useful  opcodes in store, such as file management, game memory handling, ability to  call exe functions and much more. The third version <a href="Cleo_OP.htm">adds such opcodes</a> as a call of a SCM function, creating a thread or starting a mission  from an external file and more.<br><br>
+1. <a href="Cleo_OP.html">New opcodes</a>.<br>
+CLEO 3 has 40 useful  opcodes in store, such as file management, game memory handling, ability to  call exe functions and much more. The third version <a href="Cleo_OP.html">adds such opcodes</a> as a call of a SCM function, creating a thread or starting a mission  from an external file and more.<br><br>
 2. <a href="#PLUGIN">Plugins</a>.<br>
     Read more about them below.<br><br>
-3.<strong> </strong><a href="Cleo_SCRIPT.htm">Custom scripts</a>.<br>
+3.<strong> </strong><a href="Cleo_SCRIPT.html">Custom scripts</a>.<br>
     CLEO 3 allows adding the  custom scripts to the game written in Sanny Builder without need for starting  of a new game. All you need is to write a script, place it in the CLEO folder  and run the game (new or saved). </P>
 <div class=legal>What game versions are supported? -------</div>
 
