--- a/en/html/Cleo_OP.html
+++ b/en/html/Cleo_OP.html
@@ -292,7 +292,7 @@ The using of the  following opcodes is only possible at the CLEO 3 library insta
             <div class="mycode5">0AB0:  key_pressed <span class="general1-number">0x73</span></div>
             <p>0AB0:&nbsp; key_pressed 0x73</p>
             0AB0 is used as a condition. This opcode tests if  the key is pressed on keyboard. If the key with specified code is pressed, it  returns True, otherwise False. <br><br>
-            <strong>Parameter: </strong>virtual  key code. See <a href="articles1.htm">here</a> the list of them.
+            <strong>Parameter: </strong>virtual  key code. See <a href="articles1.html">here</a> the list of them.
             <hr> <br>
             <div class="marg">CLEO 3 Opcodes</div>
             <br>
