--- a/en/html/O_101.html
+++ b/en/html/O_101.html
@@ -44,7 +44,7 @@
 	<p class="text"><b><a name="F8"></a><u>Quick game loading</u></b></p>
 	<p class="text">Sanny Builder is able to skip SA startup splash screens (F8). If this ability causes an error in your game version, disable this option.</p>
 	<p class="text"><b><u><b><u><a name="check"></a></u></b>Check conditions</u></b></p>
-	<p class="text">This option has two  meanings. First, the program replaces the <a href="conditions.htm">number of conditions</a> in the IF opcode with AND or OR. Second, the program is  able to compile the IF..END construct, and calculate needed IF parameter in the  conditions with words AND or OR.</p>
+	<p class="text">This option has two  meanings. First, the program replaces the <a href="conditions.html">number of conditions</a> in the IF opcode with AND or OR. Second, the program is  able to compile the IF..END construct, and calculate needed IF parameter in the  conditions with words AND or OR.</p>
 	<p class="text"><b><u><a name="loc"></a>Ranges check</u></b></p>
 	<p class="text">The number of accessible local variables is limited. When this option is checked, the compiler checks the correct using of them.</p>
 	<p class="text"><b><u>Write opcodes</u></b></p>
@@ -55,7 +55,7 @@
 	<p class="text"><b><u>Insert original mission names</u></b></p>
 	<p class="text">When this option checked,  the decompiler adds predefined original mission names as comments for the  opcode <b>start_mission</b> and for the  line DEFINE MISSION in the file header.</p>
 	<p class="text"><b><u><a name="SCM"></a>Add extra info to SCM </u> </b></p>
-	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.htm">hex..end constructs</a> offsets, <a href="variables.htm">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.htm#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).</p>		</TD>
+	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.html">hex..end constructs</a> offsets, <a href="variables.html">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.htm#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).</p>		</TD>
           <TD width=5
         background="rtd.gif"></TD></TR></TBODY></TABLE>
       <TABLE cellSpacing=0 cellPadding=0 width="100%">
