--- a/en/html/O_103.html
+++ b/en/html/O_103.html
@@ -25,7 +25,7 @@
 <h3>Common options</h3>
 
 <img src="img/en/old/options/sbo/editor_look.png" width="193" height="119">
-<p name="auto" id="auto">The looking depth value is used while searching <a href="constants.htm">constants</a>, labels and <a href="variables.htm">variables</a> through the code when you press the Ctrl + [space] combo. This value tells the editor how much lines to scan up and down from the active line. If you set a number of 0, the editor will scan the whole source file.</p>
+<p name="auto" id="auto">The looking depth value is used while searching <a href="constants.html">constants</a>, labels and <a href="variables.html">variables</a> through the code when you press the Ctrl + [space] combo. This value tells the editor how much lines to scan up and down from the active line. If you set a number of 0, the editor will scan the whole source file.</p>
 
 <p>If the <span class="bold">'Auto list'</span> option is checked, the list of available labels, models and variables appears automatically when you type symbols @, $, #.</p>
 
