--- a/en/html/O_105.html
+++ b/en/html/O_105.html
@@ -10,7 +10,7 @@
 <script src="../js/partial/header.js"></script>
 <p>
 <img src="img/en/old/options/sbo/hotkeys.png" width="464" height="420">
-            <p class="text">Some <a href="hotkeys.htm">hotkeys</a> are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
+            <p class="text">Some <a href="hotkeys.html">hotkeys</a> are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
 
             </TD>
           <TD width=5
