--- a/en/html/SCMHELP03.html
+++ b/en/html/SCMHELP03.html
@@ -11,13 +11,13 @@
 <p>
 Contents:
 <ul>
-<li><a href="SCMHELPGTAVC.htm">Gang IDs</a></li>
-<li><a href="SCMHELPGTAVC1.htm">Garage ID</a></li>
-<li><a href="SCMHELPGTAVC2.htm">Interiours</a></li>
-<li><a href="SCMHELPGTAVC3.htm">Keypress numbers</a></li>
-<li><a href="SCMHELPGTAVC6.htm">PedTypes</a></li>
-<li><a href="SCMHELPGTAVC4.htm">Radar icons</a></li>
-<li><a href="SCMHELPGTAVC5.htm">Weapon numbers</a></li>
+<li><a href="SCMHELPGTAVC.html">Gang IDs</a></li>
+<li><a href="SCMHELPGTAVC1.html">Garage ID</a></li>
+<li><a href="SCMHELPGTAVC2.html">Interiours</a></li>
+<li><a href="SCMHELPGTAVC3.html">Keypress numbers</a></li>
+<li><a href="SCMHELPGTAVC6.html">PedTypes</a></li>
+<li><a href="SCMHELPGTAVC4.html">Radar icons</a></li>
+<li><a href="SCMHELPGTAVC5.html">Weapon numbers</a></li>
 </ul>
 </p>
 <script src="../../js/partial/footer.js"></script>
