--- a/en/html/SCMHELP04.html
+++ b/en/html/SCMHELP04.html
@@ -11,12 +11,12 @@
 <p>
 Contents:
 <ul>
-<li><a href="SCMHELPGTALCS.htm"> Gang IDs</a></li>
-<li><a href="SCMHELPGTALCS1.htm"> Model IDs</a></li>
-<li><a href="SCMHELPGTALCS2.htm"> Player Skins</a></li>
-<li><a href="SCMHELPGTALCS3.htm"> Special Actors</a></li>
-<li><a href="SCMHELPGTALCS4.htm"> Weapon numbers</a></li>
-<li><a href="SCMHELPGTALCS5.htm"> Weather</a></li>
+<li><a href="SCMHELPGTALCS.html"> Gang IDs</a></li>
+<li><a href="SCMHELPGTALCS1.html"> Model IDs</a></li>
+<li><a href="SCMHELPGTALCS2.html"> Player Skins</a></li>
+<li><a href="SCMHELPGTALCS3.html"> Special Actors</a></li>
+<li><a href="SCMHELPGTALCS4.html"> Weapon numbers</a></li>
+<li><a href="SCMHELPGTALCS5.html"> Weather</a></li>
 </ul>
 </p>
 <script src="../../js/partial/footer.js"></script>
