--- a/en/html/SCMHELP05.html
+++ b/en/html/SCMHELP05.html
@@ -11,9 +11,9 @@
 <p>
 Contents:
 <ul>
-<li><a href="GTAVCS1.htm">Clothes IDs</a></li>
-<li><a href="GTAVCS2.htm">Gang IDs</a></li>
-<li><a href="GTAVCS3.htm">Weather IDs</a></li>
+<li><a href="GTAVCS1.html">Clothes IDs</a></li>
+<li><a href="GTAVCS2.html">Gang IDs</a></li>
+<li><a href="GTAVCS3.html">Weather IDs</a></li>
 </ul>
 </p>
 <script src="../../js/partial/footer.js"></script>
