--- a/en/html/arrays.html
+++ b/en/html/arrays.html
@@ -111,7 +111,7 @@ An array represents an indexed collection of elements of the same
 <TEXTAREA ID="holdtext4" STYLE="display:none;"></TEXTAREA></div>
 <div class=mycode5>
 <pre id="copytext4" class="NON"><span class="general1-variable">$players</span>[<span class="general1-number">0</span>].<span class="general1-command">Build</span></pre></div>
-<p>By default in SA mode, the array elements decompile with the number of indexes. You can turn this feature off through the <a href="console.htm">Console</a> using the command
+<p>By default in SA mode, the array elements decompile with the number of indexes. You can turn this feature off through the <a href="console.html">Console</a> using the command
 	toggle constant_indexes off.
 	The possibility of decompiling with the number of  indexes is allowed in LCS, VCS but is disabled by default.&nbsp; You can enable this  through the Console. </p>          </TD>
           <TD width=5
