--- a/en/html/articles.html
+++ b/en/html/articles.html
@@ -9,8 +9,8 @@
 <h2>Articles</h2>
 
 <ul>
-<li><a href="articles11.htm">Mission Coding with Sanny Builder Tutorial Part I</a></li>
-<li><a href="articles2.htm">Mission Coding with Sanny Builder Tutorial Part II</a></li>
+<li><a href="articles11.html">Mission Coding with Sanny Builder Tutorial Part I</a></li>
+<li><a href="articles2.html">Mission Coding with Sanny Builder Tutorial Part II</a></li>
 </ul>
 
 </body></html>
