--- a/en/html/articles11.html
+++ b/en/html/articles11.html
@@ -38,7 +38,7 @@
                 doing what you want to do. It can also be a good tutorial for
                 Sanny builder. I tried to make a tutorial for anyone even if
                 you don't know anything about programming. You might want
-                jump straight to <a href="http://tomworld10.free.fr/GTASA/tutorials/coding/V3/Sannys/articles2.htm" target="_blank">part II</a>, if you think you know enough
+                jump straight to <a href="http://tomworld10.free.fr/GTASA/tutorials/coding/V3/Sannys/articles2.html" target="_blank">part II</a>, if you think you know enough
                 about coding to get started.<br>
                 <br>
                 <br>
@@ -592,7 +592,7 @@ To put mods in this stripped scm you need to put your create threads command (li
                   <li class="Myli">Brilliant new "Opcode search tool" in Sanny Builder. In
                     Tools menu, IDE tools, opcode search. Here just write
                     what you're looking for and you'll get a chance to find
-                    it. There is a special section in Sanny Builder Help <a href="opcode_search.htm">here</a> at It tells you the keys to
+                    it. There is a special section in Sanny Builder Help <a href="opcode_search.html">here</a> at It tells you the keys to
                     copy opcodes to clipboard (selected opcode = Enter), to
                     sort opcodes, etc... It uses the opcodes.txt that is
                     created by Sanny and that you have to recrate manually if you change sacm.ini.<br>
@@ -1131,12 +1131,12 @@ if x = if and
 if 2x = if or
 <br>
 <br>
-Read <a href="conditions.htm">Conditions in Sanny Builder's Help</a> or/and <a href="http://www.gtaforums.com/index.php?showtopic=134970&amp;view=findpost&amp;%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20p=2083394" target="_blank">here</a> (It's for Vice City but is the
+Read <a href="conditions.html">Conditions in Sanny Builder's Help</a> or/and <a href="http://www.gtaforums.com/index.php?showtopic=134970&amp;view=findpost&amp;%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20p=2083394" target="_blank">here</a> (It's for Vice City but is the
                     same, just ignore "?") for more explanations.
 					<br>
 					<br>
 					You
-                    might want to do high-level conditions construction, read <a href="conditions.htm">Conditions in Sanny Builder's Help</a>, it explains it pretty well. Low level contructions can be good
+                    might want to do high-level conditions construction, read <a href="conditions.html">Conditions in Sanny Builder's Help</a>, it explains it pretty well. Low level contructions can be good
                     for now, and you can make high level with low level anyway.
 					<br>
 					<br>
@@ -1227,7 +1227,7 @@ Read <a href="conditions.htm">Conditions in Sanny Builder's Help</a> or/and <a h
                     them. If they all are then create the actor, the weapons
                     and the object. You can see in the comment (after //)
                     that 01B2 need the weapon model to be load before using
-                    it (for weapons numbers look in help <a href="SCMHELPGTASA14.htm">here</a> or at very good
+                    it (for weapons numbers look in help <a href="SCMHELPGTASA14.html">here</a> or at very good
 					<a href="http://www.gtaforums.com/index.php?showtopic=205020&amp;view=findpost&amp;%20%20p=3013775" target="_blank">Generic SA SCM Documentaion</a>.<br>
                     <br>
                     <br>
@@ -1314,7 +1314,7 @@ from a few return to desktop.<br>
                     variable and what's a global one. Creating, naming and ending threads, and many other things
                     that you need to know to keep going. Now we speak the
                     same "language" we can get to real coding.<br>
-                    Let's get to <a href="articles2.htm">part II</a>...<br>
+                    Let's get to <a href="articles2.html">part II</a>...<br>
                     <br>
                     Have fun <br>
      </TD>
