--- a/en/html/articles2.html
+++ b/en/html/articles2.html
@@ -35,9 +35,9 @@
                 Hi, in Part II we will get some basics of coding, create
                 spheres, actors, cars, markers, texts, panels etc....<br>
                 <br>
-                If you need to look at Part I it's <a href="articles11.htm">here</a>.<br>
+                If you need to look at Part I it's <a href="articles11.html">here</a>.<br>
                 <br>
-                As in <a href="articles11.htm">Part I</a>, I recommend you to print the
+                As in <a href="articles11.html">Part I</a>, I recommend you to print the
                 topic using Printable Version of Topic, by clicking <b>print
                 this topic</b> on top right of the first message.<br>
                 <br>
@@ -83,9 +83,9 @@
                  <span style="font-size: 14pt; line-height: 100%;"><u><b><a name="1sanny"> 1. Using Sanny : </a></b></u></span>
                  <br>
                 <br>
-                This part is most repeat parts of <a href="hotkeys.htm">Sanny's Help</a> but
+                This part is most repeat parts of <a href="hotkeys.html">Sanny's Help</a> but
                 sometimes explained differently. But you can still report to
-                the <a href="hotkeys.htm">Hotkeys page</a> for more details.<br>
+                the <a href="hotkeys.html">Hotkeys page</a> for more details.<br>
                 <br>
                 <u>Hotkeys : </u><br>
                 <br>
@@ -591,7 +591,7 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                 and <b><span class="general1-model">#GRENADE</span> </b> is
                 the model.<br>
                 <br>
-                One last thing is that you can find a weapon list <a href="SCMHELPGTASA14.htm">right here</a>.<br>
+                One last thing is that you can find a weapon list <a href="SCMHELPGTASA14.html">right here</a>.<br>
                 <br>
                 There is some weapons like the jetpack, or the parachute
                 where you can use either 0213 or 032B with ammo 1 it has the
@@ -771,7 +771,7 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                     <br>
                     Thanks to LazioFreak for finding them. You can find a
                     list of the icons and the numbers to use them on this
-                    page <a href="http://www.lzfdownloads.de/index2.php?page=46&amp;action=text" target="_blank">[SA] radar icons</a> or in <a href="SCMHELPGTASA9.htm">Sanny Builder's
+                    page <a href="http://www.lzfdownloads.de/index2.php?page=46&amp;action=text" target="_blank">[SA] radar icons</a> or in <a href="SCMHELPGTASA9.html">Sanny Builder's
                     Help contents in <i>SCM Documentation: GTA SA: radar
                     icons</i></a>.<br>
                     <br>
@@ -811,7 +811,7 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                       <li class="Myli"><span class="general1-variable">$markerxx</span> is
                         the handle of the marker</li>
                       <li class="Myli">The integer like <span class="general1-number">12</span> , <span class="general1-number">36</span> , or <span class="general1-number">23</span> are the marker
-                        icons number you can find on <a href="SCMHELPGTASA9.htm"><i>SCM Documentation: GTA SA: radar
+                        icons number you can find on <a href="SCMHELPGTASA9.html"><i>SCM Documentation: GTA SA: radar
                     icons</i></a></li>
                       <li class="Myli">The three floats are the x y z coordinates</li>
                     </ul>
