--- a/en/html/directives.html
+++ b/en/html/directives.html
@@ -32,7 +32,7 @@
 <p class="syntax">Syntax:<br>
 
 $VERSION x.y.zzzz<br><br>
-x - <a href="edit_modes.htm">edit mode ID</a><br>
+x - <a href="edit_modes.html">edit mode ID</a><br>
 
 y - parameters order.<br>
 &nbsp;&nbsp;&nbsp;0 - original, numeric<br>
@@ -82,7 +82,7 @@ or<br>
 <span class="directive">{$CLEO &lt;file extension&gt;}</span>
 <br><span class="i">File extension</span> is an optional parameter. If no extension is present, the compiler uses a default value <span class="i">.cs</span></p>
 <p>Example: <span class="directive">{$CLEO}</span> <span class="comment">// a file will get the default extension .cs</span></p>
-<p>So this directive is the perfect solution to compile a <a href="Cleo_SCRIPT.htm">CLEO script</a>.
+<p>So this directive is the perfect solution to compile a <a href="Cleo_SCRIPT.html">CLEO script</a>.
 
 <h3><a name="NOSOURCE"></a>$NOSOURCE</h3>
 <p>This directive prohibits the compiler from including a source code of the script. By default, when the option <a href="O_101.htm#SCM">Add extra info to SCM</a> is enabled, Sanny Builder adds a source code into a script file (only when either the directive <b>$EXTERNAL</b> or <b>$CLEO</b> is present). This directive changes the default behaviour of the compiler, not allowing to include the source code into an output file.</p>
@@ -90,7 +90,7 @@ or<br>
 <span class="directive">{$NOSOURCE}</span></p>
 
 <h3><a name="OPCODE"></a>$OPCODE</h3>
-<p>This directive allows to register a custom opcode directly via the script. Commonly, all the opcodes definitions are contained in a <a href="gta_ini.htm">special file</a>, one for each supported game. But sometimes it's necessary to add a custom opcode for the current script. The directive $OPCODE makes it possible without editing an opcodes INI file.</p>
+<p>This directive allows to register a custom opcode directly via the script. Commonly, all the opcodes definitions are contained in a <a href="gta_ini.html">special file</a>, one for each supported game. But sometimes it's necessary to add a custom opcode for the current script. The directive $OPCODE makes it possible without editing an opcodes INI file.</p>
 <p class="syntax">Syntax:<br><span class="directive">{$OPCODE &lt;opcode definition&gt;}</span><br>
 or<br>
 <span class="directive">{$OPCODE &lt;file name&gt;}</span><br>
