--- a/en/html/editor.html
+++ b/en/html/editor.html
@@ -11,18 +11,18 @@
 <p>
 <h2>Editor</h2>
 <ul class='l1'>
-<li><a href="O_100.htm">Options</a>
+<li><a href="O_100.html">Options</a>
   <ul class='l2'>
-    <li><a href="O_101.htm">General</a></li>
-    <li><a href="O_102.htm">Formats</a></li>
-    <li><a href="O_103.htm">Editor</a></li>
-    <li><a href="O_104.htm">Highlighter</a></li>
-    <li><a href="O_105.htm">Hotkeys</a></li>
+    <li><a href="O_101.html">General</a></li>
+    <li><a href="O_102.html">Formats</a></li>
+    <li><a href="O_103.html">Editor</a></li>
+    <li><a href="O_104.html">Highlighter</a></li>
+    <li><a href="O_105.html">Hotkeys</a></li>
   </ul>
 </li>
-<li><a href="features.htm">Features</a></li>
-<li><a href="console.htm">Console</a></li>
-<li><a href="hotkeys.htm">Hotkeys</a></li>
-<li><a href="opcode_search.htm"> Opcode Search Tool</a></li></li>
+<li><a href="features.html">Features</a></li>
+<li><a href="console.html">Console</a></li>
+<li><a href="hotkeys.html">Hotkeys</a></li>
+<li><a href="opcode_search.html"> Opcode Search Tool</a></li></li>
 </ul>
 </body></html>
