--- a/en/html/features.html
+++ b/en/html/features.html
@@ -13,7 +13,7 @@
 <p>Sanny Builder grants the end-user the following possibilities:</p>
 
 <h3>Syntax Highlighting</h3>
-<p>Sanny Builder highlights a code for easier understanding. The highlighting color scheme is <a href="O_104.htm">changeable via the options.</a></p>
+<p>Sanny Builder highlights a code for easier understanding. The highlighting color scheme is <a href="O_104.html">changeable via the options.</a></p>
 
 <h3>Bookmarks / Quick jump</h3>
 <p>You can bookmark the line by pressing <span class="kbd">Ctrl</span>+<span class="kbd">Shift</span>+<span class="kbd">0..9</span> and then to pass to this one by pressing <span class="kbd">Ctrl</span>+<span class="kbd">0..9</span>. To delete all bookmarks, use option Edit -&gt; Clear All Bookmarks. The second method is via an option 'Go To Line' invoked by pressing <span class="kbd">Ctrl</span>+<span class="kbd">G</span>. Enter a sequence number of the necessary line and the editor will move the cursor to it.</p>
@@ -36,7 +36,7 @@
 <p>Sanny supports SAMB 0.33 syntax. To use the converter, open the source file in Sanny Builder and select menu  item: 'Tools -&gt; Code converter -&gt; MB -&gt; SB'.  Note the convertor uses the file 'MB.ini' from  the SB directory which contains the variables used by SAMB and their memory addresses. If you added your own variables in the file variables.ini (from the SAMB 0.33), copy them into the file MB.ini.</p>
 
 <h3>Opcode Search</h3>
-<p>Use a built-in <a href="opcode_search.htm">Opcode Search tool</a> to find an opcode you need.</p>
+<p>Use a built-in <a href="opcode_search.html">Opcode Search tool</a> to find an opcode you need.</p>
 
 <h3><a name="Player coords managing"></a>Player Coordinates Management</h3>
 <p>Press F4 when SA is running and the  Coords Manager window will appear. Here, you can set new player coords and copy the  current ones. In the upper edit line, you can input  all three coordinates XYZ, delimited by a single space or &quot;,&quot;. Additionally,  you can insert CJ's  current coords in the text by pressing <span class="kbd">Ctrl</span>+<span class="kbd">Shift</span>+<span class="kbd">C</span>. To insert the player's angle, press <span class="kbd">Ctrl</span>+<span class="kbd">Shift</span>+<span class="kbd">E</span>.</p>
@@ -91,7 +91,7 @@
 <p>Additionally, you can use <a href="#jumpLabel">the InstaSearch</a> to jump to the mission from its name.</p>
 
 <h3><a name="mission_names"></a>Custom Mission Names</h3>
-<p>Since v3.2.0 Sanny supports custom mission names for each available <a href="edit_modes.htm">edit mode</a>. Mission names are commonly stored into a file missions.txt located in a data\&lt;game&gt; folder. This file is used by the decompiler to comment each mission entry with its title. If a main.scm file contains some custom missions you may edit this file to have proper titles after decompiling.</p>
+<p>Since v3.2.0 Sanny supports custom mission names for each available <a href="edit_modes.html">edit mode</a>. Mission names are commonly stored into a file missions.txt located in a data\&lt;game&gt; folder. This file is used by the decompiler to comment each mission entry with its title. If a main.scm file contains some custom missions you may edit this file to have proper titles after decompiling.</p>
 
 <h3><a name="The multilingual interface"></a>Multilingual Interface</h3>
 <p>Sanny Builder has fully multilingual interface translated into 15 languages. You can switch languages in the options (<span class="kbd">F10</span>). The file 'lang\How to translate.txt' contains more information about creating your own translation.</p>
