--- a/en/html/hotkeys.html
+++ b/en/html/hotkeys.html
@@ -11,7 +11,7 @@
 <p>
 <h2>Hotkeys</h2>
 
-<p>Sanny Builder supports standard keyboard shortcuts for the file and text operations (Ctrl+N, Ctrl+Z, etc). In addition there are specific hotkeys to use in work with scripts. Some of them are customizable <a href="O_105.htm">in the options</a></p>
+<p>Sanny Builder supports standard keyboard shortcuts for the file and text operations (Ctrl+N, Ctrl+Z, etc). In addition there are specific hotkeys to use in work with scripts. Some of them are customizable <a href="O_105.html">in the options</a></p>
 
 	<table class="list">
 	<tr><td><h3>Menu</h3></td></tr>
@@ -25,15 +25,15 @@
 	</tr>
 	<tr>
 	  <td><span class="kbd">F7</span></td>
-	  <td>compile text to a script file and copy it to the directory for scripts for <a href="edit_modes.htm">the current game</a></td>
+	  <td>compile text to a script file and copy it to the directory for scripts for <a href="edit_modes.html">the current game</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">F8</span></td>
-	  <td>run <a href="edit_modes.htm">the current game</a></td>
+	  <td>run <a href="edit_modes.html">the current game</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">F10</span></td>
-	  <td>open <a href="O_100.htm">the options window</a></td>
+	  <td>open <a href="O_100.html">the options window</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">F12</span></td>
@@ -174,7 +174,7 @@
 	<tr><td><h3>Misc</h3></td></tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">~</span></td>
-	  <td><a href="console.htm">open console</a></td>
+	  <td><a href="console.html">open console</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Alt</span>+<span class="kbd">S</span></td>
