--- a/en/html/variables.html
+++ b/en/html/variables.html
@@ -56,7 +56,7 @@ In order to define a variable type, there is a specific construct.</p>
 	<li>Float - floating-points values</li>
 	<li>String, ShortString - a variable containing a string literal with the fixed length (only for arrays, use s$, @s for variables)</li>
 	<li>LongString - a variable containing a string literal with the variable length (only for arrays, use v$, @v for variables)</li>
-	<li>&lt;Class name&gt; - any available <a href="classes.htm">class name</a></li>
+	<li>&lt;Class name&gt; - any available <a href="classes.html">class name</a></li>
 	</ul>
 
 <p>Local variables can be declared too.</p>
