--- a/en/html/O_104.html
+++ b/en/html/O_104.html
@@ -17,7 +17,7 @@
   <strong>Comments</strong> – the text after double-slash // or between braces  {}.<br><br>
   <strong>Labels</strong> – the identifiers beginning with an @. <br><br>
   <strong>Variables</strong> – the identifiers having a dollar-sign $ in the  beginning (global variables), or ending with an @ (local  variables). Also the aDMA type (begins with an &amp;) and the arrays are highlighted same as variables.<br><br>
-  <strong><a href="keywords.htm">Keywords</a></strong> – the special words stored in  the file keywords.ini (one for all games) and keywords.txt (separate file for  each game).<br><br>
+  <strong><a href="keywords.html">Keywords</a></strong> – the special words stored in  the file keywords.ini (one for all games) and keywords.txt (separate file for  each game).<br><br>
   <strong>Numbers</strong> – the integer and floating-point  numbers<br><br>
   <strong>Strings </strong>– the text between “…” and ‘…’.<br><br>
   <strong>Models – </strong><strong>the identifiers beginning with a  #.</strong><br><br>
