--- a/en/html/SCMHELP02.html
+++ b/en/html/SCMHELP02.html
@@ -11,27 +11,27 @@
 <p>
 Contents:
 <ul>
-<li><a href="SCMHELPGTASA.htm">Car variations</a></li>
-<li><a href="SCMHELPGTASA1.htm">Garage names</a></li>
-<li><a href="SCMHELPGTASA2.htm">Gang IDs</a></li>
-<li><a href="SCMHELPGTASA3.htm">Clothes: TORSO </a></li>
-<li><a href="SCMHELPGTASA3_1.htm">Clothes: LEGS</a></li>
-<li><a href="SCMHELPGTASA3_2.htm">Clothes: SHOES, NECKLACES, WATCHES</a></li>
-<li><a href="SCMHELPGTASA3_3.htm">Clothes: GLASSES, HATS, SPECIAL</a></li>
-<li><a href="SCMHELPGTASA17.htm">GTA SA Interior</a></li>
-<li><a href="SCMHELPGTASA4.htm">HairCuts</a></li>
-<li><a href="SCMHELPGTASA5.htm">Keypress numbers</a></li>
-<li><a href="SCMHELPGTASA6.htm">Particle effects</a></li>
-<li><a href="SCMHELPGTASA7.htm">PedTypes</a></li>
-<li><a href="SCMHELPGTASA8.htm">Player body parts</a></li>
-<li><a href="SCMHELPGTASA9.htm">Radar icons</a></li>
-<li><a href="SCMHELPGTASA10.htm">Special actors</a></li>
-<li><a href="SCMHELPGTASA11.htm">Statistics ID</a></li>
-<li><a href="SCMHELPGTASA12.htm">Tattos</a></li>
-<li><a href="SCMHELPGTASA13.htm">Train types</a></li>
-<li><a href="SCMHELPGTASA14.htm">Weapon numbers</a></li>
-<li><a href="SCMHELPGTASA15.htm">Weather IDs</a></li>
-<li><a href="SCMHELPGTASA16.htm">Zones</a></li>
+<li><a href="SCMHELPGTASA.html">Car variations</a></li>
+<li><a href="SCMHELPGTASA1.html">Garage names</a></li>
+<li><a href="SCMHELPGTASA2.html">Gang IDs</a></li>
+<li><a href="SCMHELPGTASA3.html">Clothes: TORSO </a></li>
+<li><a href="SCMHELPGTASA3_1.html">Clothes: LEGS</a></li>
+<li><a href="SCMHELPGTASA3_2.html">Clothes: SHOES, NECKLACES, WATCHES</a></li>
+<li><a href="SCMHELPGTASA3_3.html">Clothes: GLASSES, HATS, SPECIAL</a></li>
+<li><a href="SCMHELPGTASA17.html">GTA SA Interior</a></li>
+<li><a href="SCMHELPGTASA4.html">HairCuts</a></li>
+<li><a href="SCMHELPGTASA5.html">Keypress numbers</a></li>
+<li><a href="SCMHELPGTASA6.html">Particle effects</a></li>
+<li><a href="SCMHELPGTASA7.html">PedTypes</a></li>
+<li><a href="SCMHELPGTASA8.html">Player body parts</a></li>
+<li><a href="SCMHELPGTASA9.html">Radar icons</a></li>
+<li><a href="SCMHELPGTASA10.html">Special actors</a></li>
+<li><a href="SCMHELPGTASA11.html">Statistics ID</a></li>
+<li><a href="SCMHELPGTASA12.html">Tattos</a></li>
+<li><a href="SCMHELPGTASA13.html">Train types</a></li>
+<li><a href="SCMHELPGTASA14.html">Weapon numbers</a></li>
+<li><a href="SCMHELPGTASA15.html">Weather IDs</a></li>
+<li><a href="SCMHELPGTASA16.html">Zones</a></li>
 </ul>
 </p>
 <script src="../../js/partial/footer.js"></script>
