--- a/en/html/SCMHELPGTASA12.html
+++ b/en/html/SCMHELPGTASA12.html
@@ -12,7 +12,7 @@
 
 		  <div class="mycode5"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"TEXTURE", "MODEL"</span>, <span class="general1-number">BODY_PART</span>)<br>
             <span class="general1-class">Player</span>.<span class="general1-command">Build</span>(<span class="general1-variable">$PLAYER_CHAR</span>)</div>
-<p>Also, see  (<a href="SCMHELPGTASA8.htm">BODY PART</a>).</p><br>
+<p>Also, see  (<a href="SCMHELPGTASA8.html">BODY PART</a>).</p><br>
 <div align="center">
   <table width="537" cellpadding="0" cellspacing="0" rules="rows">
     <tr class="kays">
