--- a/en/html/SCMHELPGTASA3_3.html
+++ b/en/html/SCMHELPGTASA3_3.html
@@ -12,7 +12,7 @@
 
 		  <div class="mycode5"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"TEXTURE", "MODEL"</span>, <span class="general1-number">BODY_PART</span>)<br>
             <span class="general1-class">Player</span>.<span class="general1-command">Build</span>(<span class="general1-variable">$PLAYER_CHAR</span>)</div>
-<p>Also, see  (<a href="SCMHELPGTASA8.htm">BODY PART</a>).
+<p>Also, see  (<a href="SCMHELPGTASA8.html">BODY PART</a>).
 </p>
 <table cellspacing="0" cellpadding="0">
   <tr class="kays">
