--- a/en/html/coding.html
+++ b/en/html/coding.html
@@ -12,16 +12,16 @@
 
 <h2>Coding</h2>
 <ul class='l1'>
-<li><a href="data_types.htm">Data types</a></li>
-<li><a href="variables.htm">Variables</a></li>
-<li><a href="loops.htm">Constants</a></li>
-<li><a href="arrays.htm">Arrays</a></li>
-<li><a href="conditions.htm">Conditions</a></li>
-<li><a href="loops.htm">Loops</a></li>
-<li><a href="classes.htm">Classes</a></li>
-<li><a href="keywords.htm">Keywords</a></li>
-<li><a href="additional.htm">Additional commands</a></li>
-<li><a href="hex_end.htm">HEX..END</a></li>
-<li><a href="directives.htm">Directives</a></li>
+<li><a href="data_types.html">Data types</a></li>
+<li><a href="variables.html">Variables</a></li>
+<li><a href="loops.html">Constants</a></li>
+<li><a href="arrays.html">Arrays</a></li>
+<li><a href="conditions.html">Conditions</a></li>
+<li><a href="loops.html">Loops</a></li>
+<li><a href="classes.html">Classes</a></li>
+<li><a href="keywords.html">Keywords</a></li>
+<li><a href="additional.html">Additional commands</a></li>
+<li><a href="hex_end.html">HEX..END</a></li>
+<li><a href="directives.html">Directives</a></li>
 </ul>
 </body></html>
